package ws

import (
	"log"
	"net/http"
	"sync"

	"github.com/gorilla/websocket"
	"github.com/labstack/echo/v4"
	"google.golang.org/protobuf/proto"

	"github.com/yerkebulanrai/securemesh/backend/internal/repository"
	pb "github.com/yerkebulanrai/securemesh/backend/pkg/proto"
)

var upgrader = websocket.Upgrader{
	CheckOrigin: func(r *http.Request) bool { return true },
}

// –¢–µ–ø–µ—Ä—å —Ö—Ä–∞–Ω–∏–º –º–∞–ø–ø–∏–Ω–≥: UserID -> WebSocket
type WebSocketHandler struct {
	msgRepo *repository.MessageRepository
	// –ë—ã–ª–æ: clients map[*websocket.Conn]bool
	clients map[string]*websocket.Conn // –°—Ç–∞–ª–æ: ID -> Conn
	mutex   sync.Mutex
}

func NewWebSocketHandler(repo *repository.MessageRepository) *WebSocketHandler {
	return &WebSocketHandler{
		msgRepo: repo,
		clients: make(map[string]*websocket.Conn),
	}
}

func (h *WebSocketHandler) Handle(c echo.Context) error {
	// 1. –ü–æ–ª—É—á–∞–µ–º User ID –∏–∑ –ø–∞—Ä–∞–º–µ—Ç—Ä–æ–≤ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è
	// –ö–ª–∏–µ–Ω—Ç –±—É–¥–µ—Ç —Å—Ç—É—á–∞—Ç—å—Å—è —Ç–∞–∫: ws://host/ws?userID=...
	userID := c.QueryParam("userID")
	if userID == "" {
		return c.String(http.StatusBadRequest, "userID is required")
	}

	ws, err := upgrader.Upgrade(c.Response(), c.Request(), nil)
	if err != nil {
		return err
	}

	// 2. –†–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
	h.mutex.Lock()
	h.clients[userID] = ws
	h.mutex.Unlock()

	log.Printf("üë§ –ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –ø–æ–¥–∫–ª—é—á–∏–ª—Å—è: %s", userID)

	defer func() {
		h.mutex.Lock()
		delete(h.clients, userID) // –£–¥–∞–ª—è–µ–º –ø–æ ID
		h.mutex.Unlock()
		ws.Close()
		log.Printf("üë§ –ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –æ—Ç–∫–ª—é—á–∏–ª—Å—è: %s", userID)
	}()

	for {
		_, msgData, err := ws.ReadMessage()
		if err != nil {
			break
		}

		var protoMsg pb.WebSocketMessage
		if err := proto.Unmarshal(msgData, &protoMsg); err != nil {
			continue
		}

		// –í–ê–ñ–ù–û: –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ —Å—Ç–∞–≤–∏–º sender_id, —á—Ç–æ–±—ã –∫–ª–∏–µ–Ω—Ç –Ω–µ –º–æ–≥ –ø–æ–¥–¥–µ–ª–∞—Ç—å –µ–≥–æ
		protoMsg.SenderId = userID

		// –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –ë–î
		if protoMsg.Type == pb.WebSocketMessage_TEXT_MESSAGE {
			// –¢—É—Ç –º–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É: –µ—Å–ª–∏ recipient_id –ø—É—Å—Ç–æ–π ‚Äî –æ—à–∏–±–∫–∞
			go h.msgRepo.Save(c.Request().Context(), &protoMsg)
		}

		// 3. –ú–∞—Ä—à—Ä—É—Ç–∏–∑–∞—Ü–∏—è (Routing)
		if protoMsg.RecipientId != "" {
			// –ï—Å–ª–∏ —É–∫–∞–∑–∞–Ω –ø–æ–ª—É—á–∞—Ç–µ–ª—å ‚Äî –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º —Ç–æ–ª—å–∫–æ –µ–º—É
			h.sendToUser(protoMsg.RecipientId, msgData)
		} else {
			// –ï—Å–ª–∏ –Ω–µ —É–∫–∞–∑–∞–Ω ‚Äî –º–æ–∂–Ω–æ –æ—Å—Ç–∞–≤–∏—Ç—å Broadcast –¥–ª—è —Ç–µ—Å—Ç–æ–≤, –∏–ª–∏ –∑–∞–ø—Ä–µ—Ç–∏—Ç—å
			// –ü–æ–∫–∞ –æ—Å—Ç–∞–≤–∏–º —ç—Ö–æ –æ—Ç–ø—Ä–∞–≤–∏—Ç–µ–ª—é –¥–ª—è —Ç–µ—Å—Ç–∞
			h.sendToUser(userID, msgData) 
		}
	}

	return nil
}

// –§—É–Ω–∫—Ü–∏—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–º—É —é–∑–µ—Ä—É
func (h *WebSocketHandler) sendToUser(recipientID string, data []byte) {
	h.mutex.Lock()
	targetConn, ok := h.clients[recipientID]
	h.mutex.Unlock()

	if ok {
		// –ü–æ–ª—É—á–∞—Ç–µ–ª—å –æ–Ω–ª–∞–π–Ω ‚Äî –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º
		// –ò—Å–ø–æ–ª—å–∑—É–µ–º BinaryMessage (2), —Ç–∞–∫ –∫–∞–∫ —ç—Ç–æ Protobuf
		err := targetConn.WriteMessage(websocket.BinaryMessage, data)
		if err != nil {
			log.Printf("‚ùå –û—à–∏–±–∫–∞ –æ—Ç–ø—Ä–∞–≤–∫–∏ —é–∑–µ—Ä—É %s: %v", recipientID, err)
		}
	} else {
		log.Printf("üí§ –Æ–∑–µ—Ä %s –æ—Ñ–ª–∞–π–Ω (—Å–æ–æ–±—â–µ–Ω–∏–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–æ –≤ –ë–î, –¥–æ—Å—Ç–∞–≤–∏–º –ø–æ—Ç–æ–º)", recipientID)
		// –ó–¥–µ—Å—å –≤ –±—É–¥—É—â–µ–º –±—É–¥–µ—Ç –ª–æ–≥–∏–∫–∞ Push-—É–≤–µ–¥–æ–º–ª–µ–Ω–∏–π
	}
}