import Foundation
import SwiftProtobuf
import CryptoKit
import SwiftData // <--- Ð’ÐÐ–ÐÐž: Ð˜Ð¼Ð¿Ð¾Ñ€Ñ‚
internal import Combine

// ChatMessage struct Ð½Ð°Ð¼ Ð±Ð¾Ð»ÑŒÑˆÐµ ÐÐ• ÐÐ£Ð–Ð•Ð, Ð¼Ñ‹ Ð¸ÑÐ¿Ð¾Ð»ÑŒÐ·ÑƒÐµÐ¼ MessageItem Ð¸Ð· SwiftData

@MainActor
class WebSocketManager: ObservableObject {
    private let urlString = "ws://192.168.12.67:8080/ws"
    
    // === Ð–Ð•Ð¡Ð¢ÐšÐÐ¯ ÐŸÐ Ð˜Ð’Ð¯Ð—ÐšÐ ID ===
    private static let userA = "bdfa964b-06ca-4a33-b128-76c63f9edb4f"
    private static let userB = "501c87ea-d2b1-437d-8b9b-2881faec0731"
    
    #if targetEnvironment(simulator)
        private let myUserID = WebSocketManager.userB
        private let targetUserID = WebSocketManager.userA
    #else
        private let myUserID = WebSocketManager.userA
        private let targetUserID = WebSocketManager.userB
    #endif

    private var webSocketTask: URLSessionWebSocketTask?
    private var sharedSessionKey: SymmetricKey?
    private let authService = AuthService()
    
    @Published var isConnected: Bool = false
    
    // === SWIFTDATA ===
    // ÐšÐ¾Ð½Ñ‚ÐµÐºÑÑ‚ Ð±Ð°Ð·Ñ‹ Ð´Ð°Ð½Ð½Ñ‹Ñ…. ÐœÑ‹ Ð¿ÐµÑ€ÐµÐ´Ð°Ð´Ð¸Ð¼ ÐµÐ³Ð¾ Ð¸Ð· UI.
    var modelContext: ModelContext?
    
    func connect() {
        if CryptoService.shared.privateKey == nil {
            CryptoService.shared.generateKeys()
        }
        
        let fullURLString = "\(urlString)?userID=\(myUserID)"
        guard let url = URL(string: fullURLString) else { return }
        
        print("ðŸ”— ÐŸÐ¾Ð´ÐºÐ»ÑŽÑ‡Ð°ÐµÐ¼ÑÑ: \(fullURLString)")
        
        let session = URLSession(configuration: .default)
        webSocketTask = session.webSocketTask(with: url)
        webSocketTask?.resume()
        
        self.isConnected = true
        listenForMessages()
        prepareEncryption()
    }
    
    func disconnect() {
        webSocketTask?.cancel(with: .goingAway, reason: nil)
        self.isConnected = false
    }
    
    private func prepareEncryption() {
        Task {
            do {
                print("ðŸ•µï¸â€â™‚ï¸ Ð˜Ñ‰ÐµÐ¼ Ð¿ÑƒÐ±Ð»Ð¸Ñ‡Ð½Ñ‹Ð¹ ÐºÐ»ÑŽÑ‡ ÑÐ¾Ð±ÐµÑÐµÐ´Ð½Ð¸ÐºÐ°...")
                let remoteKeyString = try await authService.fetchPublicKey(userID: targetUserID)
                self.sharedSessionKey = try CryptoService.shared.deriveSharedSecret(remotePublicKeyString: remoteKeyString)
                print("âœ… E2EE Ð“Ð¾Ñ‚Ð¾Ð²Ð¾! ÐšÐ°Ð½Ð°Ð» Ð·Ð°Ñ‰Ð¸Ñ‰ÐµÐ½.")
            } catch {
                print("âŒ ÐžÑˆÐ¸Ð±ÐºÐ° E2EE Handshake: \(error)")
            }
        }
    }
    
    private func listenForMessages() {
        Task {
            do {
                while let task = webSocketTask, task.state == .running {
                    let message = try await task.receive()
                    switch message {
                    case .data(let data):
                        if let protoMsg = try? Securemesh_WebSocketMessage(serializedData: data) {
                            handleIncomingMessage(protoMsg)
                        }
                    default: break
                    }
                }
            } catch {
                print("âŒ Disconnected: \(error)")
                self.isConnected = false
            }
        }
    }
    
    // === Ð¡ÐžÐ¥Ð ÐÐÐ•ÐÐ˜Ð• Ð’ Ð‘ÐÐ—Ð£ ===
    private func saveMessageToDB(text: String, isMe: Bool) {
        guard let context = modelContext else {
            print("âš ï¸ ÐžÑˆÐ¸Ð±ÐºÐ°: Context Ð½Ðµ ÑƒÑÑ‚Ð°Ð½Ð¾Ð²Ð»ÐµÐ½, ÑÐ¾Ð¾Ð±Ñ‰ÐµÐ½Ð¸Ðµ Ð½Ðµ ÑÐ¾Ñ…Ñ€Ð°Ð½ÐµÐ½Ð¾!")
            return
        }
        
        // Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ Ð¾Ð±ÑŠÐµÐºÑ‚ SwiftData
        let newMessage = MessageItem(text: text, isMe: isMe, date: Date())
        
        // Ð’ÑÑ‚Ð°Ð²Ð»ÑÐµÐ¼ Ð² Ð±Ð°Ð·Ñƒ
        context.insert(newMessage)
        
        // Ð¡Ð¾Ñ…Ñ€Ð°Ð½ÑÑ‚ÑŒ (context.save()) Ð¾Ð±Ñ‹Ñ‡Ð½Ð¾ Ð½Ðµ Ð¾Ð±ÑÐ·Ð°Ñ‚ÐµÐ»ÑŒÐ½Ð¾, SwiftData Ð´ÐµÐ»Ð°ÐµÑ‚ ÑÑ‚Ð¾ Ð°Ð²Ñ‚Ð¾Ð¼Ð°Ñ‚Ð¸Ñ‡ÐµÑÐºÐ¸,
        // Ð½Ð¾ Ð´Ð»Ñ Ð½Ð°Ð´ÐµÐ¶Ð½Ð¾ÑÑ‚Ð¸ Ð¼Ð¾Ð¶Ð½Ð¾ Ð¾ÑÑ‚Ð°Ð²Ð¸Ñ‚ÑŒ Ð½Ð° Ð°Ð²Ñ‚Ð¾Ð¿Ð¸Ð»Ð¾Ñ‚Ðµ.
        print("ðŸ’¾ Ð¡Ð¾Ð¾Ð±Ñ‰ÐµÐ½Ð¸Ðµ ÑÐ¾Ñ…Ñ€Ð°Ð½ÐµÐ½Ð¾ Ð² Ñ‚ÐµÐ»ÐµÑ„Ð¾Ð½: \(text)")
    }
    
    private func handleIncomingMessage(_ msg: Securemesh_WebSocketMessage) {
        if msg.senderID == myUserID { return }
        guard let sessionKey = self.sharedSessionKey else { return }
        
        do {
            let decryptedText = try CryptoService.shared.decrypt(combinedData: msg.payload, using: sessionKey)
            print("ðŸ“© DECRYPTED: \(decryptedText)")
            
            // Ð¡Ð¾Ñ…Ñ€Ð°Ð½ÑÐµÐ¼ ÐºÐ°Ðº "Ð§ÑƒÐ¶Ð¾Ðµ" (isMe: false)
            Task { @MainActor in
                self.saveMessageToDB(text: decryptedText, isMe: false)
            }
            
        } catch {
            print("â›”ï¸ ÐžÑˆÐ¸Ð±ÐºÐ°: \(error)")
        }
    }
    
    func sendProtoMessage(text: String) {
        guard let sessionKey = self.sharedSessionKey else {
            print("â›”ï¸ ÐšÐ»ÑŽÑ‡Ð¸ ÐµÑ‰Ðµ Ð½Ðµ Ð³Ð¾Ñ‚Ð¾Ð²Ñ‹...")
            prepareEncryption()
            return
        }
        
        Task {
            do {
                let encryptedData = try CryptoService.shared.encrypt(text: text, using: sessionKey)
                
                var msg = Securemesh_WebSocketMessage()
                msg.type = .textMessage
                msg.id = UUID().uuidString
                msg.timestamp = Int64(Date().timeIntervalSince1970)
                msg.senderID = myUserID
                msg.recipientID = targetUserID
                msg.payload = encryptedData
                
                let binaryData = try msg.serializedData()
                let message = URLSessionWebSocketTask.Message.data(binaryData)
                try await webSocketTask?.send(message)
                
                print("ðŸ“¤ ÐžÑ‚Ð¿Ñ€Ð°Ð²Ð»ÐµÐ½Ð¾: \(text)")
                
                // Ð¡Ð¾Ñ…Ñ€Ð°Ð½ÑÐµÐ¼ ÐºÐ°Ðº "Ð¡Ð²Ð¾Ðµ" (isMe: true)
                Task { @MainActor in
                    self.saveMessageToDB(text: text, isMe: true)
                }
                
            } catch {
                print("âŒ ÐžÑˆÐ¸Ð±ÐºÐ° Ð¾Ñ‚Ð¿Ñ€Ð°Ð²ÐºÐ¸: \(error)")
            }
        }
    }
}
